--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1298,7 +1298,7 @@
         "invalidFormat": "Invalid format!",
         "loginButton": "Login",
         "selectDifferent": "Select different file",
-        "supportWarning": "Warning! You browser doesn't support some some file operations required to restore backup, we recommend you to use Chrome or Firefox browsers to restore your backup.",
+        "supportWarning": "Warning! Your browser doesn't support the necessary file operations to restore your backup. We recommend to use Chrome or Firefox browsers for recovery.",
         "title": "Select Login Type",
         "withoutBinFile": "I don't have .bin-file"
     },
@@ -1383,9 +1383,9 @@
             "copyLog": "Copy Log",
             "copyScreenshot": "Right click in Image Preview -> Copy",
             "copySuccess": "Copy ended",
-            "explanatory_text_1": "This report collects the last entries in the console log and takes a screenshot of the current view before the modal is opened. Click on either entry to see the details.",
+            "explanatory_text_1": "This report collects the last entries of the error log and takes a screenshot of the current view, without the dialog opened. Click on entry to see the details.",
             "explanatory_text_2": "Please report the issue you have found to GitHub:",
-            "explanatory_text_3": "You can copy and paste (CTRL+V) the screenshot as well as the log entries directly into the issue content text area, pasting the screenshot also works in telegram chat.",
+            "explanatory_text_3": "You can copy and paste (CTRL+C & CTRL+V) the screenshot and the log entries directly into the issue content text area. This works also for Telegram chat.",
             "explanatory_text_4": "If your issue affects user security you might be eligible for a bounty. In that case do not report it publicly, but rather through:",
             "hideLog": "Hide Log",
             "hideScreenshot": "Hide screenshot",
@@ -1610,14 +1610,14 @@
         "accountDescription": "Please keep your password in a safe place. Don’t share it with any third-parties or send it online.",
         "accountLoginByValue": "Account name + Password",
         "accountModelTitle": "By Account Name<span class=\"hide-text-for-small\"> and Password</span>",
-        "accountNote": "If you forget your pass phrase you will be unable to access your account and your funds. We cannot reset or restore your password! Memorize or write down your username and password!",
+        "accountNote": "If you forget your passphrase you will be unable to access your account and your funds. We cannot reset or restore your password! Memorize or write down your username and password!",
         "attention": "Attention",
         "backUpRestoreKey": "Back up and restore Account",
         "checkboxRecover": "I understand that no one can recover my password or .bin file if I forget or lose it.",
-        "checkboxRemember": "I have remembered or otherwise stored my password and I safely kept downloaded .bin file.",
+        "checkboxRemember": "I have memorized or otherwise stored my password and I safely kept downloaded .bin file.",
         "checkboxUploaded": "I understand that .bin file must be used during the login process and without .bin file I will lose access to my funds.",
         "continue": "Continue",
-        "copyPassword": "Copy your password to save.",
+        "copyPassword": "Copy password",
         "createAccountTitle": "Create Account by .bin-file",
         "createByPassword": "Create Account by Name and Password",
         "downloadFile": "Download file",
