--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -322,7 +322,7 @@
             "resolve_prediction": "Resolve prediction",
             "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
-            "reward_percent_tooltip": "The market fee sharing indicates the reward percentage for the referral program, instead of only benefitting the asset owner.",
+            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Short name (max 32 characters)",
             "symbol": "Symbol",
             "to": "Issue to account",
@@ -497,7 +497,7 @@
         "no_valid": "No valid feeds for %(asset_symbol)s",
         "pay_max_debt": "Pay Max Debt",
         "target_collateral_ratio": "Target Collateral Ratio",
-        "target_collateral_ratio_explanation": "The corresponding order for a margin call will be just big enough, to bring the collateral ratio to target ratio",
+        "target_collateral_ratio_explanation": "The corresponding order for a margin call will be just big enough, to bring the collateral ratio to the target collateral ratio",
         "target_collateral_ratio_short": "TCR",
         "title": "%(asset_symbol)s Margin",
         "update": "Update",
