--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1282,8 +1282,7 @@
         "preimage_hash": "Хеш прообраза",
         "preimage_hash_explanation": "Хеш прообраза вычисляется из секретного прообраза и является обязательным для HTLC. HTLC может быть получен только с секретным прообразом. Контент, который вы видите: '(<preimage size>, <hash algorithm type>): <preimage hash>'",
         "redeemer": "Получатель",
-        "seconds_to_add": "Добавить секунды к периоду востребования",
-        "update_issuer": "Обновить эмитента"
+        "seconds_to_add": "Добавить секунды к периоду востребования"
     },
     "icons": {
         "adjust": "Настроить маржинальную позицию",
