refine wording of issuer (asset owner)
closes #3095

Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -67,7 +67,7 @@
         "in_open_value": "This is the estimated value of the %(asset)s you have in open orders.",
         "intro_text_1": "Your Decentralized Platform",
         "intro_text_2": "<b>The DEX</b> is inherently decentralized, enabling you to trade the BitShares core token (BTS) and a range of trustless price-stable, market-pegged assets such as bitUSD, bitCNY, bitBTC, bitGold and more. These assets can all be traded with <b>zero</b> counter-party risk, putting you in total control of your funds.",
-        "intro_text_3": "<b>The DEX</b> also enables creation of user-issued assets (UIAs), which can be traded against any other UIAs or trustless assets on the platform.  One well-known issuer on The DEX is <b>OpenLedger</b>, offering a host of assets including BTC, ETH, STEEM, DASH, LTC, DOGE, and many more",
+        "intro_text_3": "<b>The DEX</b> also enables creation of user-issued assets (UIAs), which can be traded against any other UIAs or trustless assets on the platform.  One well-known asset owner on The DEX is <b>OpenLedger</b>, offering a host of assets including BTC, ETH, STEEM, DASH, LTC, DOGE, and many more",
         "intro_text_4": "This gives cryptocurrency traders a unique blend of traditional and decentralized trading, all in a familiar exchange interface. Happy trading!",
         "intro_text_title": "Welcome to %(wallet_name)s",
         "login_with": "Login with",
@@ -301,7 +301,7 @@
             "flags": "Flags",
             "force_settlement_delay_sec": "Delay for forced settlements (minutes)",
             "force_settlement_offset_percent": "Percent offset of forced settlements",
-            "global_settle": "Allow issuer to force a global settling",
+            "global_settle": "Allow asset owner to force a global settling",
             "id": "ID",
             "invalid_backing_asset_change": "You can't change the backing asset of an asset that has a non-zero current supply",
             "invalid_market_pair": "Preferred market pairing can not be the same market",
@@ -317,9 +317,9 @@
             "mpa": "SmartCoin",
             "name": "Asset Name",
             "need_asset": "At least one of the two assets must be %(name)s",
-            "new_issuer": "New owner account",
+            "new_issuer": "New asset owner account",
             "optional": "Optional settings",
-            "override_authority": "Issuer may transfer asset back to himself",
+            "override_authority": "Asset owner may transfer asset back to himself",
             "perm_warning": "WARNING: Permissions may only be disabled, once disabled they may not be reactivated!!",
             "pm": "Binary prediction market",
             "precision": "Precision",
@@ -336,7 +336,7 @@
             "to": "Issue to account",
             "too_large": "That max supply is too big, please choose a smaller number",
             "too_many_feed": "Number of feed producers exceeded the max allowed (%(max)s).",
-            "transfer_restricted": "Issuer must approve all transfers",
+            "transfer_restricted": "Asset owner must approve all transfers",
             "update_owner": "Update owner",
             "update_owner_text": "The asset owner may change the owner to another account using this form:",
             "visible": "Hide asset from search and markets",
@@ -610,7 +610,7 @@
         "market_frozen": "The owner of %(asset)s has disabled trading in this market.",
         "market_name": "My Markets",
         "market_picker": {
-            "filter_by_issuer": "Filter by issuer",
+            "filter_by_issuer": "Filter by asset owner",
             "find_by_asset": "Find by asset",
             "results": "Results (%(total_assets)s)",
             "search": "Asset name",
@@ -822,7 +822,7 @@
                 "claim_balance": "Claim fee pool balance",
                 "claim_fees": "Claim fees",
                 "claim_pool_text": "The asset owner may withdraw funds from the fee pool using this form:",
-                "claim_text": "The asset issuer may claim any accumulated fees here.",
+                "claim_text": "The asset owner may claim any accumulated fees here.",
                 "core_exchange_rate": "Core exchange rate (CER)",
                 "fund": "Fund the fee pool",
                 "fund_text": "Anyone can add %(core)s to the fee pool balance using this form:",
@@ -830,7 +830,7 @@
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
                 "select_fee_asset": "Select asset to pay fee",
                 "title": "Fee Pool",
-                "unclaimed_issuer_income": "Unclaimed issuer income",
+                "unclaimed_issuer_income": "Unclaimed asset owner income",
                 "use_asset_as_default_fee": "Make selected asset default for paying fees",
                 "use_selected_asset": "Use selected asset"
             },
@@ -911,7 +911,7 @@
             "summary": {
                 "asset_type": "Asset type",
                 "current_supply": "Current supply",
-                "issuer": "Issuer",
+                "issuer": "Asset owner",
                 "market_fee": "Market fee",
                 "market_fee_referral_reward_percent": "Market fee referral reward",
                 "stealth_supply": "Stealth supply"
@@ -930,7 +930,7 @@
         "assets": {
             "backing_asset": "Backing asset",
             "id": "ID",
-            "issuer": "Issuer",
+            "issuer": "Asset owner",
             "market": "SmartCoins",
             "precision": "Precision",
             "prediction": "Prediction market assets",
@@ -1283,8 +1283,7 @@
         "preimage_hash": "Preimage hash",
         "preimage_hash_explanation": "The preimage hash is calculated from the secret preimage and is imperative to HTLCs. With the secret preimage the HTLC can be redeemed. The content you see is: '(<preimage size>, <hash algorithm type>): <preimage hash>'",
         "redeemer": "Redeemer",
-        "seconds_to_add": "Add seconds to claim period",
-        "update_issuer": "Update issuer"
+        "seconds_to_add": "Add seconds to claim period"
     },
     "icons": {
         "adjust": "Adjust margin position",
@@ -1811,10 +1810,10 @@
             "add_prediction": "A prediction is reflected as a limit order on the market of the prediction market asset with its collateral. This lets you create a buy order (you agree with the prediction), or a sell order with previous borrowing of the prediction market asset (you disagree with the prediction). You can also oppose one of the existing predictions listed below, which correlates to matching one of the existing limit orders on the blockchain.",
             "create_prediction_market_asset": "A prediction market is a special kind of SmartCoin. This lets you create such a prediction market asset with inputs tailored for this purpose.",
             "hide_invalid_asset": "Per default the table below only shows prediction market assets that meet common standards required for a consistent user experience (prediction and resolution date are given, and reasonable market fee). Uncheck this to show all assets that exist on the blockchain, and make sure you know what you are doing.",
-            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known issuers that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset issuer such that the asset will be resolved according to the real world outcome. Uncheck this to show all issuers that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
+            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known asset owners that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset owner such that the asset will be resolved according to the real world outcome. Uncheck this to show all asset owners that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
             "oppose_is_incorrect": "You are opposing someone that thinks the prediction is incorrect. That means, you think the prediction will prove true. On the blockchain that reflects as buying and hodling the prediction market asset.",
             "oppose_proves_true": "You are opposing someone that thinks the prediction proves true. That means, you think the prediction will be incorrect. On the blockchain that reflects as borrowing and selling the prediction market asset.",
-            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the issuer to properly reflects the real world outcome on the blockchain.",
+            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the asset owner to properly reflects the real world outcome on the blockchain.",
             "what_is_a_prediction_offer": "A prediction offer reflects limit orders on the market of the prediction market asset and its collateral. Agreement with the prediction (Prediction proves true) means that you want to buy the prediction market asset, disagreement (Prediction is incorrect) means that you borrow the prediction market asset and sell it"
         }
     },
@@ -2465,7 +2464,7 @@
             "asset_update": "Update asset",
             "asset_update_bitasset": "Update SmartCoin",
             "asset_update_feed_producers": "Update asset feed producers",
-            "asset_update_issuer": "Update asset issuer",
+            "asset_update_issuer": "Update asset owner",
             "balance_claim": "Claim balance",
             "bid_collateral": "Collateral bid",
             "blind_transfer": "Blinded transfer",
