--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -610,7 +610,7 @@
         "market_frozen": "Il proprietario di %(asset)s ha disabilitato il trading in questo mercato.",
         "market_name": "I miei mercati",
         "market_picker": {
-            "filter_by_issuer": "Filter by issuer",
+            "filter_by_issuer": "Filter by asset owner",
             "find_by_asset": "Find by asset",
             "results": "Results (%(total_assets)s)",
             "search": "Asset name",
@@ -866,7 +866,7 @@
                 "maximum_short_squeeze_price": "Maximum short squeeze price (MSSP)",
                 "maximum_short_squeeze_ratio": "Massimo short sqeeze ratio (MSSR)",
                 "min_feeds": "Minimum feeds",
-                "settlement_price": "",
+                "settlement_price": "Force Settlement price",
                 "title": "Price Feed"
             },
             "price_feed_data": {
@@ -877,7 +877,7 @@
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Pubblicato",
                 "publisher": "Publisher",
-                "settlement_price": "",
+                "settlement_price": "Force Settlement Price",
                 "title": "Dati del Price Feed"
             },
             "settlement": {
@@ -899,7 +899,7 @@
                 "settle_remaining_volume": "Remaining settleable volume",
                 "settlement_funds": "Settlement Funds",
                 "settlement_funds_collateral_ratio": "Settlement Fund Collateral Ratio",
-                "settlement_price": "",
+                "settlement_price": "Force Settlement Price",
                 "title": "Settlement"
             },
             "summary": {
@@ -959,7 +959,7 @@
             "op_type": "Tipo di operazione",
             "previous": "Precedente",
             "previous_secret": "Segreto precedente",
-            "settlement_price": "",
+            "settlement_price": "Force Settlement Price",
             "short_limit": "Limite di Short",
             "time": "Ora",
             "title": "Blocco",
@@ -1135,6 +1135,12 @@
         "fiat_text": "I depositi e i prelievi in valuta legale sono forniti da CCEDK. Per iniziare devi completare la procedura di registrazione. Sono disponibili le seguenti conversioni:",
         "frozen": "The user account %(account)s was frozen",
         "gateway": "Gateway",
+        "gateway_deposit": {
+            "confirmations": {
+                "last_irreversible": "Your deposit will be deposited after transaction will become irreversible",
+                "n_blocks": "Your deposit will be deposited after %(blocks)s confirmations from the network"
+            }
+        },
         "gateway_text": "Scegli qui se vuoi effettuare un deposito o un prelievo",
         "generate": "Genera",
         "generate_new": "Ottieni un nuovo indirizzo",
@@ -1234,6 +1240,7 @@
         "account_notify": "L'account attivo è ora %(account)s",
         "account_value": "Valore dell'Account",
         "accounts_manage": "Gestisci account",
+        "advanced": "Advanced",
         "collateral_ratio": "Collateral ratio",
         "create_account": "Crea Account",
         "create_asset": "Crea Asset",
@@ -1797,10 +1804,10 @@
             "add_prediction": "A prediction is reflected as a limit order on the market of the prediction market asset with its collateral. This lets you create a buy order (you agree with the prediction), or a sell order with previous borrowing of the prediction market asset (you disagree with the prediction). You can also oppose one of the existing predictions listed below, which correlates to matching one of the existing limit orders on the blockchain.",
             "create_prediction_market_asset": "A prediction market is a special kind of SmartCoin. This lets you create such a prediction market asset with inputs tailored for this purpose.",
             "hide_invalid_asset": "Per default the table below only shows prediction market assets that meet common standards required for a consistent user experience (prediction and resolution date are given, and reasonable market fee). Uncheck this to show all assets that exist on the blockchain, and make sure you know what you are doing.",
-            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known issuers that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset issuer such that the asset will be resolved according to the real world outcome. Uncheck this to show all issuers that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
+            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known asset owners that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset owner such that the asset will be resolved according to the real world outcome. Uncheck this to show all asset owners that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
             "oppose_is_incorrect": "You are opposing someone that thinks the prediction is incorrect. That means, you think the prediction will prove true. On the blockchain that reflects as buying and hodling the prediction market asset.",
             "oppose_proves_true": "You are opposing someone that thinks the prediction proves true. That means, you think the prediction will be incorrect. On the blockchain that reflects as borrowing and selling the prediction market asset.",
-            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the issuer to properly reflects the real world outcome on the blockchain.",
+            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the asset owner to properly reflects the real world outcome on the blockchain.",
             "what_is_a_prediction_offer": "A prediction offer reflects limit orders on the market of the prediction market asset and its collateral. Agreement with the prediction (Prediction proves true) means that you want to buy the prediction market asset, disagreement (Prediction is incorrect) means that you borrow the prediction market asset and sell it"
         }
     },
@@ -2313,7 +2320,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
-        "proxy_search": "",
+        "proxy_search": "Search for an account to be used as your proxy for voting. Your account will act as if you would be voting exactly the same as your proxy.",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
@@ -2451,7 +2458,7 @@
             "asset_update": "Aggiorna asset",
             "asset_update_bitasset": "Aggiorna SmartCoin",
             "asset_update_feed_producers": "Aggiorna produttori di feed per l'asset",
-            "asset_update_issuer": "Update asset issuer",
+            "asset_update_issuer": "Update asset owner",
             "balance_claim": "Riscuoti saldo",
             "bid_collateral": "Collateral bid",
             "blind_transfer": "Blinded transfer",
