--- a/app/assets/locales/locale-ko.json
+++ b/app/assets/locales/locale-ko.json
@@ -67,7 +67,7 @@
         "in_open_value": "This is the estimated value of the %(asset)s you have in open orders.",
         "intro_text_1": "Your Decentralized Platform",
         "intro_text_2": "<b>The DEX</b> is inherently decentralized, enabling you to trade the BitShares core token (BTS) and a range of trustless price-stable, market-pegged assets such as bitUSD, bitCNY, bitBTC, bitGold and more. These assets can all be traded with <b>zero</b> counter-party risk, putting you in total control of your funds.",
-        "intro_text_3": "<b>The DEX</b> also enables creation of user-issued assets (UIAs), which can be traded against any other UIAs or trustless assets on the platform.  One well-known issuer on The DEX is <b>OpenLedger</b>, offering a host of assets including BTC, ETH, STEEM, DASH, LTC, DOGE, and many more",
+        "intro_text_3": "<b>The DEX</b> also enables creation of user-issued assets (UIAs), which can be traded against any other UIAs or trustless assets on the platform.  One well-known asset owner on The DEX is <b>OpenLedger</b>, offering a host of assets including BTC, ETH, STEEM, DASH, LTC, DOGE, and many more",
         "intro_text_4": "This gives cryptocurrency traders a unique blend of traditional and decentralized trading, all in a familiar exchange interface. Happy trading!",
         "intro_text_title": "Welcome to BitShares",
         "login_with": "Login with",
@@ -301,7 +301,7 @@
             "flags": "Flags",
             "force_settlement_delay_sec": "Delay for forced settlements (minutes)",
             "force_settlement_offset_percent": "Percent offset of forced settlements",
-            "global_settle": "Allow issuer to force a global settling",
+            "global_settle": "Allow asset owner to force a global settling",
             "id": "ID",
             "invalid_backing_asset_change": "You can't change the backing asset of an asset that has a non-zero current supply",
             "invalid_market_pair": "Preferred market pairing can not be the same market",
@@ -317,9 +317,9 @@
             "mpa": "SmartCoin",
             "name": "자산 이름",
             "need_asset": "At least one of the two assets must be %(name)s",
-            "new_issuer": "New owner account",
+            "new_issuer": "New asset owner account",
             "optional": "Optional settings",
-            "override_authority": "Issuer may transfer asset back to himself",
+            "override_authority": "Asset owner may transfer asset back to himself",
             "perm_warning": "WARNING: Permissions may only be disabled, once disabled they may not be reactivated!!",
             "pm": "Binary prediction market",
             "precision": "소수자리수",
@@ -336,7 +336,7 @@
             "to": "다음 계정으로 발행",
             "too_large": "That max supply is too big, please choose a smaller number",
             "too_many_feed": "Number of feed producers exceeded the max allowed (%(max)s).",
-            "transfer_restricted": "Issuer must approve all transfers",
+            "transfer_restricted": "Asset owner must approve all transfers",
             "update_owner": "Update owner",
             "update_owner_text": "The asset owner may change the owner to another account using this form:",
             "visible": "Hide asset from search and markets",
@@ -610,7 +610,7 @@
         "market_frozen": "The owner of %(asset)s has disabled trading in this market.",
         "market_name": "종목명",
         "market_picker": {
-            "filter_by_issuer": "Filter by issuer",
+            "filter_by_issuer": "Filter by asset owner",
             "find_by_asset": "Find by asset",
             "results": "Results (%(total_assets)s)",
             "search": "Asset name",
@@ -816,7 +816,7 @@
                 "claim_balance": "Claim fee pool balance",
                 "claim_fees": "Claim fees",
                 "claim_pool_text": "The asset owner may withdraw funds from the fee pool using this form:",
-                "claim_text": "The asset issuer may claim any accumulated fees here.",
+                "claim_text": "The asset owner may claim any accumulated fees here.",
                 "core_exchange_rate": "Core exchange rate",
                 "fund": "Fund the fee pool",
                 "fund_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s",
@@ -824,7 +824,7 @@
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
                 "select_fee_asset": "Select asset to pay fee",
                 "title": "Fee Pool",
-                "unclaimed_issuer_income": "Unclaimed issuer income",
+                "unclaimed_issuer_income": "Unclaimed asset owner income",
                 "use_asset_as_default_fee": "Make selected asset default for paying fees",
                 "use_selected_asset": "Use selected asset"
             },
@@ -1135,6 +1135,12 @@
         "fiat_text": "Note: Fiat gateways are closed till further notice. Sorry for the inconvenience! Please follow our latest news and updates here <a target='_blank' rel='noopener noreferrer' href='https://blog.openledger.info/'>blog.openledger.info</a>",
         "frozen": "The user account %(account)s was frozen",
         "gateway": "Gateway",
+        "gateway_deposit": {
+            "confirmations": {
+                "last_irreversible": "Your deposit will be deposited after transaction will become irreversible",
+                "n_blocks": "Your deposit will be deposited after %(blocks)s confirmations from the network"
+            }
+        },
         "gateway_text": "Choose whether you want to make a deposit or withdrawal here",
         "generate": "Generate",
         "generate_new": "Get new address",
@@ -1234,6 +1240,7 @@
         "account_notify": "The active account is now %(account)s",
         "account_value": "계정 값",
         "accounts_manage": "계정 관리",
+        "advanced": "Advanced",
         "collateral_ratio": "Collateral ratio",
         "create_account": "계정 생성",
         "create_asset": "자산 생성",
@@ -1270,8 +1277,7 @@
         "preimage_hash": "Preimage hash",
         "preimage_hash_explanation": "The preimage hash is calculated from the secret preimage and is imperative to HTLCs. With the secret preimage the HTLC can be redeemed. The content you see is: '(<preimage size>, <hash algorithm type>): <preimage hash>'",
         "redeemer": "Redeemer",
-        "seconds_to_add": "Add seconds to claim period",
-        "update_issuer": "Update issuer"
+        "seconds_to_add": "Add seconds to claim period"
     },
     "icons": {
         "adjust": "Adjust margin position",
@@ -1798,10 +1804,10 @@
             "add_prediction": "A prediction is reflected as a limit order on the market of the prediction market asset with its collateral. This lets you create a buy order (you agree with the prediction), or a sell order with previous borrowing of the prediction market asset (you disagree with the prediction). You can also oppose one of the existing predictions listed below, which correlates to matching one of the existing limit orders on the blockchain.",
             "create_prediction_market_asset": "A prediction market is a special kind of SmartCoin. This lets you create such a prediction market asset with inputs tailored for this purpose.",
             "hide_invalid_asset": "Per default the table below only shows prediction market assets that meet common standards required for a consistent user experience (prediction and resolution date are given, and reasonable market fee). Uncheck this to show all assets that exist on the blockchain, and make sure you know what you are doing.",
-            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known issuers that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset issuer such that the asset will be resolved according to the real world outcome. Uncheck this to show all issuers that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
+            "hide_unknown_houses": "Per default the table below only shows prediction market assets of known asset owners that meet requirements to increase their trustworthiness. As a participant, you need trust in the asset owner such that the asset will be resolved according to the real world outcome. Uncheck this to show all asset owners that exist on the blockchain, and make sure you know what you are doing. If you are the owner of a prediction market asset and want to be included in the default list, please contact the BitShares community.",
             "oppose_is_incorrect": "You are opposing someone that thinks the prediction is incorrect. That means, you think the prediction will prove true. On the blockchain that reflects as buying and hodling the prediction market asset.",
             "oppose_proves_true": "You are opposing someone that thinks the prediction proves true. That means, you think the prediction will be incorrect. On the blockchain that reflects as borrowing and selling the prediction market asset.",
-            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the issuer to properly reflects the real world outcome on the blockchain.",
+            "what_is_a_prediction_market_asset": "A prediction market asset is a special kind of asset that allows you to agree or disagree with the prediction statement of the asset and put collateral behind your opinion. It can be created by any user, and if you are participating you need to trust the asset owner to properly reflects the real world outcome on the blockchain.",
             "what_is_a_prediction_offer": "A prediction offer reflects limit orders on the market of the prediction market asset and its collateral. Agreement with the prediction (Prediction proves true) means that you want to buy the prediction market asset, disagreement (Prediction is incorrect) means that you borrow the prediction market asset and sell it"
         }
     },
@@ -2314,7 +2320,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
-        "proxy_search": "",
+        "proxy_search": "Search for an account to be used as your proxy for voting. Your account will act as if you would be voting exactly the same as your proxy.",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
@@ -2452,7 +2458,7 @@
             "asset_update": "자산 업데이트",
             "asset_update_bitasset": "스마트코인 업데이트",
             "asset_update_feed_producers": "자산 피드 생성자 업데이트",
-            "asset_update_issuer": "Update asset issuer",
+            "asset_update_issuer": "Update asset owner",
             "balance_claim": "잔고 청구",
             "bid_collateral": "Collateral bid",
             "blind_transfer": "Blinded transfer",
