--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -519,7 +519,10 @@
     "connection": {
         "automatic_reconnect": "Nach %(reconnect_in_seconds)s wird automatisch ein neue Verbindung hergestellt.",
         "manual_ping": "Ping auf Knoten ausführen.",
+        "manual_ping_and_narrow_down": "Narrow down nodes and ping",
         "manual_reconnect": "Erneut verbinden",
+        "narrow_down_nodes": "Narrow down nodes",
+        "narrow_down_nodes_tooltip": "Restrict the ping and automatic selection process of the wallet to only the selected nodes/regions. Choose nodes/regions close to your geolocation, this may significantly increase your felt connectivity. Leave empty to consider all.",
         "out_of_sync": "Ihre Verbindung ist seit %(out_of_sync_seconds)s Sekunden nicht mehr synchron.",
         "title_out_of_sync": "Verbindung nicht mehr synchron",
         "want_to_reconnect": "Wenn die Verbindung wiederhergestellt wird, verschwindet diese Meldung automatisch."
@@ -585,6 +588,7 @@
         "ema": "Exponentiell gleitender Mittelwert",
         "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Top Märkte",
+        "fee": "Fee",
         "feed_price": "Preisangabe",
         "filter": "Suchen ...",
         "flip": "Vertauschen",
@@ -639,6 +643,7 @@
         "order_book": "Auftragsliste",
         "order_depth": "Ordertiefe",
         "order_grouping": "Auftragsgruppierung",
+        "orders": "Orders",
         "others": "Andere",
         "overbought": "Überkauft",
         "oversold": "Überverkauft",
@@ -667,6 +672,27 @@
         "quick_deposit_gateway": "Deposit real %(asset)s using a gateway to obtain IOUs whose backing is provided by the respective gateway",
         "quick_deposit_gateway_button": "Use a Gateway",
         "quick_deposit_tooltip": "Deposit %(asset)s, click to open options",
+        "quick_trade": "Quick trade",
+        "quick_trade_details": {
+            "amount": "Amount",
+            "effective": "effective",
+            "feed_price": "Feed price",
+            "id": "Id",
+            "last_price": "Last market price",
+            "liquidity_penalty": "Liquidity penalty",
+            "market_fee": "Market fee",
+            "order": "Order",
+            "orders": "Orders",
+            "placeholder_receive": "Choose asset to receive",
+            "placeholder_sell": "Choose asset to sell",
+            "price": "Price",
+            "seller": "Seller",
+            "subscribe_to_market": "Subscribe to market",
+            "tooltip": "Enter at least three characters of an asset symbol to search",
+            "total": "Total",
+            "transaction_fee": "Transaction fee",
+            "your_price": "Your price"
+        },
         "quote": "Währung zur Kursangabe:",
         "quote_selection": "Ändere Kursangabe",
         "quote_supply": "Verfügbarkeit von Kursangaben",
@@ -2225,6 +2251,10 @@
                 "preimage_random": "The best choice for the secret is a random string. If your secret can be guessed or is too short, you risk losing your funds. Use the copy button in this row to save the Preimage and hashing algorithm.",
                 "preimage_size": "The Preimage size is the length of the above Preimage. This value will also be written to the chain. Use the copy button in this row to save the Preimage hash and Preimage size."
             }
+        },
+        "instant_trade": {
+            "description": "Instantly execute market orders in a simplified interface.",
+            "title": "Instant trade"
         },
         "merchant_protocol": {
             "description": "Create, view and pay remittance requests or invoices",
