--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -520,9 +520,9 @@
         "automatic_reconnect": " After %(reconnect_in_seconds)s seconds a reconnection attempt will be made automatically.",
         "manual_ping": "Go to ping nodes",
         "manual_ping_and_narrow_down": "Narrow down nodes and ping",
+        "manual_reconnect": "Try reconnecting now",
         "narrow_down_nodes": "Narrow down nodes",
         "narrow_down_nodes_tooltip": "Restrict the ping and automatic selection process of the wallet to only the selected nodes/regions. Choose nodes/regions close to your geolocation, this may significantly increase your felt connectivity. Leave empty to consider all.",
-        "manual_reconnect": "Try reconnecting now",
         "out_of_sync": "Your connection has been out of sync for %(out_of_sync_seconds)s seconds.",
         "title_out_of_sync": "Connection out of sync",
         "want_to_reconnect": "If the connection can be recovered this message will disappear automatically."
@@ -640,10 +640,10 @@
         "no_bids": "No bids",
         "no_data": "No data",
         "no_orders": "No orders",
-        "orders": "Orders",
         "order_book": "Order Book",
         "order_depth": "Market Depth",
         "order_grouping": "Order Grouping %(orderlimit)s%",
+        "orders": "Orders",
         "others": "Others",
         "overbought": "Overbought",
         "oversold": "Oversold",
@@ -674,24 +674,24 @@
         "quick_deposit_tooltip": "Deposit %(asset)s, click to open options",
         "quick_trade": "Quick trade",
         "quick_trade_details": {
-            "placeholder_sell": "Choose asset to sell",
-            "placeholder_receive": "Choose asset to receive",
+            "amount": "Amount",
             "effective": "effective",
-            "your_price": "Your price",
             "feed_price": "Feed price",
+            "id": "Id",
             "last_price": "Last market price",
             "liquidity_penalty": "Liquidity penalty",
             "market_fee": "Market fee",
-            "transaction_fee": "Transaction fee",
-            "id": "Id",
-            "seller": "Seller",
-            "amount": "Amount",
-            "total": "Total",
-            "price": "Price",
             "order": "Order",
             "orders": "Orders",
+            "placeholder_receive": "Choose asset to receive",
+            "placeholder_sell": "Choose asset to sell",
+            "price": "Price",
+            "seller": "Seller",
+            "subscribe_to_market": "Subscribe to market",
             "tooltip": "Enter at least three characters of an asset symbol to search",
-            "subscribe_to_market": "Subscribe to market"
+            "total": "Total",
+            "transaction_fee": "Transaction fee",
+            "your_price": "Your price"
         },
         "quote": "Quote currency:",
         "quote_selection": "Modify quote selection",
@@ -2253,6 +2253,10 @@
                 "preimage_size": "The Preimage size is the length of the above Preimage. This value will also be written to the chain. Use the copy button in this row to save the Preimage hash and Preimage size."
             }
         },
+        "instant_trade": {
+            "description": "Instantly execute market orders in a simplified interface.",
+            "title": "Instant trade"
+        },
         "merchant_protocol": {
             "description": "Create, view and pay remittance requests or invoices",
             "title": "Merchant Protocol"
@@ -2272,10 +2276,6 @@
         "voting": {
             "description": "Vote on block producers, committee members and worker proposals to influence strategic decisions and advancement of the BitShares Blockchain.",
             "title": "Voting"
-        },
-        "instant_trade": {
-            "description": "Instantly execute market orders in a simplified interface.",
-            "title": "Instant trade"
         }
     },
     "sync_fail": {
