--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -519,7 +519,10 @@
     "connection": {
         "automatic_reconnect": "Despues de  %(reconnect_in_seconds)s segundos un intento de reconexión se hará automáticamente.",
         "manual_ping": "Ir a ping nodos",
+        "manual_ping_and_narrow_down": "Narrow down nodes and ping",
         "manual_reconnect": "Reconectarse ahora",
+        "narrow_down_nodes": "Narrow down nodes",
+        "narrow_down_nodes_tooltip": "Restrict the ping and automatic selection process of the wallet to only the selected nodes/regions. Choose nodes/regions close to your geolocation, this may significantly increase your felt connectivity. Leave empty to consider all.",
         "out_of_sync": "Tu conexión no ha estado sincronizada para %(out_of_sync_seconds)s segundos.",
         "title_out_of_sync": "Conexión fuera de sincronización",
         "want_to_reconnect": "Si la conexión se puede recuperar, este mensaje desaparecerá automáticamente."
@@ -585,6 +588,7 @@
         "ema": "Media móvil exponencial",
         "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Mercados principales",
+        "fee": "Fee",
         "feed_price": "Predo de Feed",
         "filter": "Filtrar...",
         "flip": "Dar la vuelta",
@@ -639,6 +643,7 @@
         "order_book": "Libro de Pedidos",
         "order_depth": "Profundidad de Mercado",
         "order_grouping": "Agrupación de Ordenes %(orderlimit)s%",
+        "orders": "Orders",
         "others": "Otros",
         "overbought": "Sobrecomprado",
         "oversold": "Sobrevendido",
@@ -667,6 +672,27 @@
         "quick_deposit_gateway": "Depositar real %(asset)s usando una gateway para obtener IOUs respaldado por la gateway respectiva",
         "quick_deposit_gateway_button": "Use una Gateway",
         "quick_deposit_tooltip": "Depositar %(asset)s",
+        "quick_trade": "Quick trade",
+        "quick_trade_details": {
+            "amount": "Amount",
+            "effective": "effective",
+            "feed_price": "Feed price",
+            "id": "Id",
+            "last_price": "Last market price",
+            "liquidity_penalty": "Liquidity penalty",
+            "market_fee": "Market fee",
+            "order": "Order",
+            "orders": "Orders",
+            "placeholder_receive": "Choose asset to receive",
+            "placeholder_sell": "Choose asset to sell",
+            "price": "Price",
+            "seller": "Seller",
+            "subscribe_to_market": "Subscribe to market",
+            "tooltip": "Enter at least three characters of an asset symbol to search",
+            "total": "Total",
+            "transaction_fee": "Transaction fee",
+            "your_price": "Your price"
+        },
         "quote": "Divisa de cotización:",
         "quote_selection": "Modificar la selección de cotización",
         "quote_supply": "Fuente de cotización",
@@ -2225,6 +2251,10 @@
                 "preimage_random": "The best choice for the secret is a random string. If your secret can be guessed or is too short, you risk losing your funds. Use the copy button in this row to save the Preimage and hashing algorithm.",
                 "preimage_size": "The Preimage size is the length of the above Preimage. This value will also be written to the chain. Use the copy button in this row to save the Preimage hash and Preimage size."
             }
+        },
+        "instant_trade": {
+            "description": "Instantly execute market orders in a simplified interface.",
+            "title": "Instant trade"
         },
         "merchant_protocol": {
             "description": "Create, view and pay remittance requests or invoices",
